<?xml version="1.0"?>
<package format="2">
    <name>visiondiffusiontesting</name>
    <version>1.0.0</version>
    <description>
        Used to try vision-based diffusion models. Super exciting!
    </description>
    <maintainer email="hagenow@csail.mit.edu">Mike H.</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
